Fix overflow from request detail when big string placed in survey

--- a/project-static/squest/css/squest-dark.css
+++ b/project-static/squest/css/squest-dark.css
@@ -7,16 +7,10 @@ footer{
     color: #fff !important;
 }
 
-.bg-dark table tr {
+.bg-dark table tr,.bg-dark blockquote,.bg-dark pre {
     background-color: #343a40 !important;
     color: #fff !important;
 }
-
-.bg-dark blockquote {
-    background-color: #343a40 !important;
-    color: #fff !important;
-}
-
 
 .dtfc-fixed-left {
     background-color: #343a40 !important;
